--- a/.config/waybar/themes/ml4w/style.css
+++ b/.config/waybar/themes/ml4w/style.css
@@ -55,8 +55,7 @@ window#waybar {
     margin: 4px 3px;
     border-radius: 15px;
     border: 0px;
-    /* color: @textcolor1; */
-    color: yellow;
+    color: @textcolor1;
     background-color: @workspacesbackground2;
     transition: all 0.3s ease-in-out;
     opacity: 0.4;
@@ -78,22 +77,14 @@ window#waybar {
     opacity:0.7;
 }
 
-#workspaces button.persistent {
-    color: yellow;
-    font-size: 12px;
-}
-
-#workspaces button.focused {
-    color: lightgreen;
-}
 /* -----------------------------------------------------
  * Tooltips
  * ----------------------------------------------------- */
 
 tooltip {
-    border-radius: 10px;
+    border-radius: 16px;
     background-color: @backgroundlight;
-    opacity:0.8;
+    opacity:0.9;
     padding:20px;
     margin:0px;
 }
