--- a/.config/waybar/themes/ml4w-modern/black/style.css
+++ b/.config/waybar/themes/ml4w-modern/black/style.css
@@ -11,12 +11,12 @@
  @define-color textcolor1 #FFFFFF;
  @define-color textcolor2 #FFFFFF;
  @define-color textcolor3 #000000;
- @define-color iconcolor #000000;
+ @define-color iconcolor #FFF;
  
  @import '../style.css';
  
 #custom-ml4w-welcome {
-    background-image: url("../../assets/ml4w-icon-black.svg");
+    background-image: url("../../assets/ml4w-icon-white.svg");
 }
 
 #custom-chatgpt {
